nomnomnom.css
html, body {
  margin: 0;
  height: 100%;
  font-family: "Roboto Slab", Georgia, sans-serif;
  font-weight: 400;
  color: #444;
  background-color: #f0f0f0;
}

#outer {
  height: 100%;

  display: -webkit-flex;
  display: flex;

  -webkit-flex-direction: column;
  flex-direction: column;

  -webkit-align-items: stretch;
  align-items: stretch;
}

#flexbox {
  margin: 0;

  /* As a flexbox item of #outer. */
  -webkit-flex: 1 0 auto;
  flex: 1 0 auto;

  /* As a flexbox container. */
  display: -webkit-flex;
  display: flex;

  -webkit-align-items: stretch;
  align-items: stretch;
}

header, footer, #content {
  box-sizing: border-box;
}

header, footer {
  background-color: #303940;
  color: #fff;
  width: 320px;
  padding: 10px 0 20px 30px;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.7);
  z-index: 0;

  -webkit-flex: 0 0 auto;
  flex: 0 0 auto;
}

  header p, footer p {
    margin-top: 2em;
  }

  header a, footer a {
    color: #4ecd3a;
  }

  header h1, footer h1 {
    font-size: 3em;
    font-weight: 400;
    margin: 0;
  }

    header h1 a, footer h1 a {
      color: #fff;
    }

    header h1 a:hover, footer h1 a:hover {
      border: none;
    }

  header h2, footer h2 {
    color: white;
    font-weight: 400;
    font-size: 1.4em;
    margin-bottom: 0;
  }

  header ul, footer ul {
    list-style-type: none;
    padding: 0;
    margin-left: 0;
  }

  header .sections li {
    font-size: 1.4em;
  }

    header .sections li a {
      margin-left: -0.5em;
      padding-left: 0.5em;
      padding-top: 0.2em;
      padding-bottom: 0.2em;
      display: inline-block;
      width: 100%;
      transition: background-color 0.5s;
    }

    header .sections li a:hover {
      border: none;
      background-color: rgba(0, 0, 0, 0.3);
    }

  header .sections .selected {
    background: linear-gradient(to bottom, #4ecd3a, #2cab18) !important;
    color: white;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
  }

    header .sections .selected:hover {
      background: linear-gradient(to bottom, #4ecd3a, #2cab18) !important;
    }

#content {
  padding: 0;
  min-width: 0;
  width: 100%;

  -webkit-flex: 1 1 auto;
  flex: 1 1 auto;

  display: -webkit-flex;
  display: flex;

  -webkit-flex-direction: column;
  flex-direction: column;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  align-items: center;
}

  #content > section {
    padding: 10px 30px 20px 30px;
    background-color: white;
    border-radius: 0.1rem;
    margin-bottom: 20px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
  }

  #content > section.section-header {
    -webkit-align-self: stretch;
    align-self: stretch;
  }

  #content > section:not(.section-header) {
    max-width: 800px;
    margin: 0 20px 20px 20px;
  }

  #content > section:not(.section-header):first-child {
    max-width: 800px;
    margin: 20px;
  }

  #content h1 {
    font-size: 2em;
    font-weight: 700;
    margin: 0.5em 0;
  }

  #content h2 {
    font-size: 1.5em;
    font-weight: 400;
    color: #444;
    margin: 0.7em 0;
  }

  #content h3 {
    font-size: 1.2em;
    font-weight: 400;
    color: #666;
    margin: 0.3em 0;
  }

  #content img {
    max-width: 100%;
  }

#content.front-page {
  background-image: url("/images/feather.jpg");
  background-size: cover;
  background-position: center center;
  padding-bottom: 8em;
}

  #content.front-page > section {
    color: #222;
    background-color: rgba(255, 255, 255, 0.8);
  }

footer {
  display: none;
}

a {
  color: #309d2b;
  text-decoration: none;
  transition-property: border-color;
  transition-duration: 0.5s;
  border-color: transparent;
}

a:hover {
  border-bottom: 0.15em solid;
}

.button {
  display: inline-block;
  text-transform: uppercase;
  font-weight: 400;
  font-size: 0.8rem;
  background-image: linear-gradient(to bottom, #52bf4f, #208c1a);
  background-size: 100% 200%;
  background-position: 0 95%;
  color: white;
  padding: 0.4rem;
  margin: 0.2rem 0.2rem 0.2rem 0.5rem;
  border-radius: 0.1rem;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
  transition: background-position 0.5s, color 0.5s;
}

.button:hover {
  border: none;
  background-position: 0 0;
}

  .button i {
    margin-top: -0.2em;
  }

.button:active {
  color: rgba(255, 255, 255, 0.5);
}

.download {
  background-image: linear-gradient(to bottom, #2292dd, #0060aa);
}

.flextitle {
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  align-items: center;
}

  .flextitle div {
    text-align: right;
    -webkit-flex: 0 1 auto;
    flex: 0 1 auto;
  }

  .flextitle .button {
    -webkit-flex: 0 0 auto;
    flex: 0 0 auto;
  }

.reactive-container {
  max-width: 1200px;
}

.video-container {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
}

  .video-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

.credit {
  font-size: 0.8em;
  color: #666;
  padding-top: 0.8em;
  border-top: 1px solid #ccc;
}

.extra-top-space {
  margin-top: 1em;
}

.error {
  text-align: center;
  margin-bottom: 2em;
}

  .error h1 {
    font-size: 6em !important;
    font-family: "VT323", monospace;
  }

  .error .error-description {
    border: 1px solid #ccc;
    padding: 0.6em;
    border-radius: 0.3rem;
    text-transform: uppercase;
  }

.tolkien p {
  margin: 0;
}

::-moz-selection {
  color: #444;
  background: #4ecd3a;
}

::selection {
  color: #444;
  background: #4ecd3a;
}

@media screen and (min-width: 40em) and (max-width: 60em) {
  header, footer {
    width: 220px;
  }

  header h1, footer h1 {
    padding-top: 0.1em;
    font-size: 2em;
  }

  #content h1 {
    font-size: 1.5em;
  }

  #content h2 {
    font-size: 1.3em;
  }

  #content h3 {
    font-size: 1.1em;
  }
}

@media screen and (max-width: 40em) {
  #flexbox {
    -webkit-flex-direction: column;
    flex-direction: column;
  }

  header, footer {
    width: 100%;
    padding: 10px 30px 20px 30px;
    display: block;
  }

  header {
    padding-bottom: 0;
    text-align: center;
  }

    header .sections {
      margin-bottom: 0;
    }

      header .sections li {
        font-size: 1em;
        display: inline-block;
        margin: 0;
      }

        header .sections li a {
          margin-left: 0.1em;
          margin-right: 0.1em;
          padding: 0.5em;
          width: auto;
        }

  .footer-sidebar {
    display: none;
  }

  #content > section {
    margin-bottom: 15px;
  }

  #content > section:not(.section-header) {
    margin: 0 10px 15px 10px;
  }

  #content h1 {
    font-size: 1.5em;
  }

  #content h2 {
    font-size: 1.3em;
  }

  #content h3 {
    font-size: 1.1em;
  }
}

